# uptime_robot

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
config/settings/: __init__.py  apps.py  base.py  celerybeat.py  databases.py  static.py
core/: admin.py  models.py  services.py  tasks.py  views.py
core/migrations/: 0001_initial.py  0002_report_website.py
