[tool.poetry]
name = "uptime_robot"
version = "0.1.0"
description = ""
authors = ["Rostyslav <malanyukrostik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
django-environ = "==0.8.1"
psycopg2-binary = "==2.9.3"
celery = "==5.2.3"
django-celery-beat = "==2.2.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
